2007-03-18  Richard Dale  <rdale@foton.es>

	* Changed the name of the debug class from Debug to QDebug as it made 
	  using Debug.Asserts inconvenient
	* Added some copyright headers to the source files
	* Build the project with debug by default

2007-03-20  Arno Rehn  <arno@arnorehn.de>

	* Allow 'zero' return types for methods and for args of methods being called
	  from C++

2007-03-18  Richard Dale  <rdale@foton.es>

	* Instead of setting and getting properties via QObject.SetProperty() and
	  QObject.Property() and creating QVariants, call the methods in the
	  Smoke library directly.

2007-03-17  Richard Dale  <rdale@foton.es>

	* Removed redundant method calls for invoking methods on the interceptors,
	  that only cast the interceptor to the type of the current class. Just
	  do the cast directly. The 'staticInterceptor' field now has the type of
	  the instance for which it is proxying the static methods and doesn't
	  need casting at all.
	* When marshalling pointer lists from C++ to C# use the 
	  'resolve_classname()' function to get a more accurate name of the class
	  to instantiate.
	* Improved resolve_classname() for QGraphicsItem subclasses

2007-03-16  Richard Dale  <rdale@foton.es>

	* Overriding abstract methods wasn't working because no SmokeMethod
	  Attribute was being generated for them
	* Fixed bug in invoking constructors where wrapper instances were being
	  created twice
	* When constructing an instance via CreateInstance() the CreateProxy()
	  method is now optional, so just don't call it if not found.

2007-03-14  Richard Dale  <rdale@foton.es>

	* Only generate destructors if the class is implementing IDisposible
	* Only generate code to set up transparent proxy interceptors for instance
	  or static methods if the class has some instance or static methods that
	  would need an interceptor
	* Order the generated code:
		1) Enums
		2) Properties
		3) Methods not converted
		4) Instance methods
		5) Static methods
